<resources>
    <string name="app_name">WeatherApp</string>

    <string name="temperature">%1$.1f°C</string>
    <string name="wind">%1$s\n%2$.1f kph</string>
    <string name="pressure">%1$d mb</string>
    <string name="precip">%1$.1f mm</string>
    <string name="percent">%1$d%%</string>
    <string name="temper_degree">%1$.1f°</string>
    <string name="min_max_temper">%1$.1f/%2$.1f°C</string>
    <string name="max_wind">%1$.1f kph</string>
    <string name="uv">%1$.1f</string>

    <string name="more_details">More details</string>
    <string name="weekly_forecast">Weekly forecast</string>
    <string name="search_by_city">Search by city</string>
    <string name="search_by_geolocation">Search by geolocation</string>
    <string name="weather_condition">Weather condition</string>
    <string name="enter_a_city">Enter a city</string>
    <string name="alert_confirm">Search</string>
    <string name="alert_cancel">Cancel</string>
    <string name="city_name">City name</string>
    <string name="enter_city_hint">Enter a city</string>
    <string name="no_internet">"No Internet connection!"</string>
    <string name="turn_on_internet">"Do you want to turn on the Internet?"</string>
    <string name="settings">"Settings"</string>
    <string name="response_failed">Response failed!</string>
    <string name="smth_went_wrong">Something went wrong!</string>
    <string name="turn_on_gps">Do you want to turn on GPS?</string>
    <string name="no_gps">Couldn\'t retrieve location</string>
    <string name="retry">Retry</string>
    <string name="loading">Loading…</string>
    <string name="current_weather">Current weather</string>
    <string name="hourly_forecast">Hourly forecast</string>
</resources>