<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/currentWeatherFragment">

    <fragment
        android:id="@+id/currentWeatherFragment"
        android:name="com.github.zuev98.weatherapp.presentation.ui.current.CurrentWeatherFragment"
        android:label="@string/current_weather"
        tools:layout="@layout/fragment_current_weather">
        <action
            android:id="@+id/show_day_forecast_list"
            app:destination="@id/dayForecastListFragment" />
        <action
            android:id="@+id/show_hour_forecast_list"
            app:destination="@id/hourForecastListFragment" />
    </fragment>
    <fragment
        android:id="@+id/dayForecastListFragment"
        android:name="com.github.zuev98.weatherapp.presentation.ui.dayforecast.DayForecastListFragment"
        android:label="@string/weekly_forecast"
        tools:layout="@layout/fragment_day_forecast_list">
        <action
            android:id="@+id/show_hour_forecast_list"
            app:destination="@id/hourForecastListFragment" />
    </fragment>
    <fragment
        android:id="@+id/hourForecastListFragment"
        android:name="com.github.zuev98.weatherapp.presentation.ui.hourforecast.HourForecastListFragment"
        android:label="@string/hourly_forecast"
        tools:layout="@layout/fragment_hour_forecast_list">
        <argument
            android:name="position"
            app:argType="integer" />
    </fragment>
</navigation>